fixed right align of actions

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,11 @@ a, a:hover {
 	text-decoration: none;
 }
 
+
+.actions {
+	float: right;
+}
+
 .btn-outline-secondary{
 	color: #495057;
 	border-color: #ced4da;
